[package]
name = "kraken_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
meshtastic = "0.1.6"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
serde = {version = "1.0.203", features = ["derive"]}
tokio = { version = "1.38.0", features = ["full"] }
ureq = "2.9.7"
yaserde = {version = "0.10.1", features = ["yaserde_derive"] }
